--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
-<h2>
-  We will everybody make SGGame for real
-  #MakeSpacialGazeGreatAgain
-</h2>
-
-<center>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/Los42buIecE" frameborder="0" allowfullscreen></iframe>
-</center>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>SGGame</title>
+    <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <script type="text/javascript" src="script.js"></script>
+</head>
+<body>
+    <span class="header">SGGame</span>
+    <div class="textbody">
+    <h2>
+      We will everybody make SGGame for real
+      #MakeSpacialGazeGreatAgain
+    </h2>
+    <center>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Los42buIecE" frameborder="0" allowfullscreen></iframe>
+    </center>
+    <p id="question">For now be happy with RPS lol. n_n</p>
+   <div id="buttons">
+            <button onclick="howRu('Good')">Good <i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button> <button onclick="howRu('Bad')">Bad <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+            </button>
+        </div>
+       <p id="reply"></p>
+    </div>
+    <div class="footer"><i class="fa fa-copyright" aria-hidden="true"></i> Jeremy Piemonte 2016</div>
+</body>
+</html>
