--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <span class="header">SGGame</span>
     <div class="textbody">
-    <h2>
+    <h2 style="color:#333399">
       We will everybody make SGGame for real
      <br />
       #MakeSpacialGazeGreatAgain
