--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <span class="header">SGGame</span>
     <div class="textbody">
-    <h2 style="color:#333399">
+    <h2 style="color:#00FFFF">
       We will everybody make SGGame for real
      <br />
       #MakeSpacialGazeGreatAgain
     </h2>
-   <p id="question">For now be happy with RPS lol. n_n</p>
+        <p id="question"><font color="#00FFFF">For now be happy with RPS lol. n_n</font></p>
    <div id="buttons">
             <button onclick="howRu('Good')">Good <i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button> <button onclick="howRu('Bad')">Bad <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
             </button>
