--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>SGGame</title>
-    <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="icon" type="image/png" href="http://www.serebii.net/pokedex-sm/icon/373.png" />
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
