--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SGGame</title>
+    <title>SpacialGaze Server</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" type="image/png" href="http://www.serebii.net/pokedex-sm/icon/373.png" />
     <script type="text/javascript" src="script.js"></script>
@@ -11,7 +11,7 @@
     <span class="header">SGGame</span>
     <div class="textbody">
     <h2 style="color:#00FFFF">
-      We will everybody make SGGame for real
+      The SpacialGaze Server (Pokémon Showdown!)
      <br />
       #MakeSpacialGazeGreatAgain
     </h2>
@@ -24,6 +24,11 @@
      <center>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Los42buIecE" frameborder="0" allowfullscreen></iframe>
     </center>   
-    </div>   
+    </div>
+    <div class="footer">
+        <button><a href="https://github.com/HoeenCoder/SpacialGaze"><i class="fa fa-github" aria-hidden="true"></i>We are open Source.View us on Github</a></button><br />
+        <a href="http://spacialgaze.psim.us/">Join Our Server!</a>
+    </div>
+        
 </body>
 </html>
