--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
     <div class="footer">
         <button><a href="https://github.com/HoeenCoder/SpacialGaze"><i class="fa fa-github" aria-hidden="true"></i>We are open Source.View us on Github</a></button><br />
-        <a href="http://spacialgaze.psim.us/">Join Our Server!</a>
-    </div>
-        
+        <a href="http://spacialgaze.psim.us/">Join Our Server!</a><br />
+        <i class="fa fa-copyright" aria-hidden="true"></i>2016-17 Yudhajit Sinha[Lord Haji] And SpacialGaze
+    </div>   
 </body>
 </html>
