--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Los42buIecE" frameborder="0" allowfullscreen></iframe>
     </center>   
     </div>
-    <div class="footer">
+    <div class="textbody">
         <button><a href="https://github.com/HoeenCoder/SpacialGaze"><i class="fa fa-github" aria-hidden="true"></i>We are open Source.View us on Github</a></button><br />
         <a href="http://spacialgaze.psim.us/">Join Our Server!</a><br />
         <i class="fa fa-copyright" aria-hidden="true"></i>2016-17 Yudhajit Sinha[Lord Haji] And SpacialGaze
